--- a/dd-java-agent/instrumentation/mule-http-connector-1.0/mule-http-connector-1.0.gradle
+++ b/dd-java-agent/instrumentation/mule-http-connector-1.0/mule-http-connector-1.0.gradle
@@ -26,6 +26,8 @@ dependencies {
   compileOnly group: 'org.glassfish.grizzly', name: 'grizzly-http', version: '2.3.35'
   compileOnly group: 'org.glassfish.grizzly', name: 'grizzly-http-client', version: '1.14'
 
+  testCompile group: 'org.glassfish.grizzly', name: 'grizzly-http-client', version: '1.14'
+  testCompile group: 'org.glassfish.grizzly', name: 'grizzly-http-server', version: '2.0'
 }
 
 
